<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/project_title_tl"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/project_title_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_project"
                 />
        </android.support.design.widget.TextInputLayout>

    </android.support.design.card.MaterialCardView>
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/project_des_tl"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/project_des_et"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:hint="@string/prompt_desc"
                    android:inputType="textMultiLine"
                    android:lines="3"/>

            </android.support.design.widget.TextInputLayout>
    </android.support.design.card.MaterialCardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_submit"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/Primarycolor"
            android:text="@string/action_Submit"
            android:textColor="#B2EBF2" />

</LinearLayout>