<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp"
        app:contentPadding="10dp"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Select Project"
                android:textColor="@color/fontcolor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/gt_collect_project_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/action_Submit"
                android:minHeight="48dp" />



            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <Button
                    android:id="@+id/gt_collect_sample_back"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@color/Primarycolor"
                    android:text="@string/action_back"
                    android:textColor="#B2EBF2" />
                <Button
                    android:id="@+id/gt_collect_sample_Next"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@color/Primarycolor"
                    android:text="@string/action_next"
                    android:textColor="#B2EBF2" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.CardView>
</android.support.v7.widget.LinearLayoutCompat>