<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor_light"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/login_linear"
    android:padding="@dimen/activity_horizontal_margin">
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        >
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


         <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@android:drawable/ic_menu_mapmode"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in_short"
            android:textSize="30sp"
            android:textColor="@color/fontcolor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/login_email_tl"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/login_email_et"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                tools:ignore="TouchTargetSizeCheck"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/login_pwd_tl"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_pwd_et"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_signin_btn"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/Primarycolor"
            android:text="@string/action_sign_in_short"
            android:textColor="#B2EBF2" />


        <TextView
            android:id="@+id/login_signup_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have an account? SIGN UP"
            android:gravity="center"
            android:textColor="@color/fontcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>